📝 : 이미지 대체 텍스트 원본 출처 표기

--- a/blog/hello-world/index.mdx
+++ b/blog/hello-world/index.mdx
@@ -10,6 +10,6 @@ hero_image_credit_link: ''
 첫 글입니다.
 
 이 글을 내놓기 위해 야크 털을 깎는데 3년이 걸렸네요.
-![yak](./yak.jpeg)
+![Photo by Quaritsch Photography onUnsplash](./yak.jpeg)
 
 당분간 자주 찾아뵙겠습니다.
